--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+	<meta name="viewport"
+	      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
 	<title>vue-carousel examples</title>
 </head>
 <body>
-<app></app>
+<div id="body">
+	<app></app>
+</div>
 <script src="js/app.js"></script>
 </body>
 </html>
