--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 	<title>vue-carousel examples</title>
 </head>
 <body>
-<div id="body">
+<div id="app">
 </div>
 
 <script src="js/app.js"></script>
