--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 <div id="app">
 </div>
 
-<script src="../node_modules/vue/dist/vue.min.js"></script>
+<script src="js/vue.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
