--- a/demo/index_without_build.html
+++ b/demo/index_without_build.html
@@ -19,7 +19,7 @@
 	</div>
 </div>
 
-<script src="../node_modules/vue/dist/vue.min.js"></script>
+<script src="js/vue.min.js"></script>
 <script src="../dist/main.js"></script>
 <script>
 	(function (win, Vue) {
