--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport"
 	      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
 	<title>vue-carousel examples</title>
+	<link rel="stylesheet" href="../dist/main.css">
 </head>
 <body>
 <div id="app">
